# email-inference

./: Cargo.toml  README.md  go.mod  go.sum
cmd/mail/: main.go
cmd/rag/: main.go
src/: main.rs
