[package]
name = "ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert.git", branch = "main" }
tch = "0.14.0"
pgvector = { version = "0.3", features = ["postgres"] }
serde_json = "1.0.108"
postgres = "0.19.7"
